--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Denis Savitsky – GitHub</title>
+  <title>Denis Savitskiy – GitHub</title>
   <meta name="description" content="sadfuzzy.github.com">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,14 +22,14 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Denis Savitsky – GitHub</h1>
+      <h1 class="title">Denis Savitskiy – GitHub</h1>
     </header>
     <div id="container">
       <p class="tagline">sadfuzzy.github.com</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/sadfuzzy" class="code">View Denis Savitsky – GitHub on GitHub</a>
+          <a href="https://github.com/sadfuzzy" class="code">View Denis Savitskiy – GitHub on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
